kubernetes/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: django-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  replicas: 2
  selector:
    matchLabels:
      project: django-app
  template:
    metadata:
      labels:
        project: django-app
    spec:
      containers:
      - name: web
        image: web
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP

---
apiVersion: v1
kind: Service
metadata:
  name: django-service
  labels:
    app.kubernetes.io/component: controller
spec:
  selector:
    project: django-app
  ports: 
  - port: 80
    protocol: TCP
    targetPort: 80
